# advent-of-code

./: main.md
2018/: d01.ml  d02.ml
2019/: d01.ml  d2.ml  i2.txt
2021/: J1.ml  J2bis.ml  J3-corr-prof.py  J3.ml  J3.py  J3bis.ml  J4.ml  J6.ml  dune
2021/_build/: .db  .digest-db  log
2021/_build/.aliases/default/: all-00000000000000000000000000000000
2021/_build/default/: J2.ml  J2bis.ml  J3.ml  J4.ml  dune
2021/_build/default/.J1.eobjs/byte/: dune__exe__J1.cmi  dune__exe__J1.cmo  dune__exe__J1.cmt
2021/_build/default/.J1.eobjs/native/: dune__exe__J1.cmx
2021/_build/default/.J2.eobjs/byte/: dune__exe__J2.cmi  dune__exe__J2.cmo  dune__exe__J2.cmt
2021/_build/default/.J2.eobjs/native/: dune__exe__J2.cmx
2021/_build/default/.J2bis.eobjs/byte/: dune__exe__J2bis.cmi  dune__exe__J2bis.cmo  dune__exe__J2bis.cmt
2021/_build/default/.J2bis.eobjs/native/: dune__exe__J2bis.cmx
2021/_build/default/.J3.eobjs/byte/: dune__exe__J3.cmi  dune__exe__J3.cmo  dune__exe__J3.cmt
2021/_build/default/.J3.eobjs/native/: dune__exe__J3.cmx
2021/_build/default/.J4.eobjs/byte/: dune__exe__J4.cmi  dune__exe__J4.cmo  dune__exe__J4.cmt
2021/_build/default/.J4.eobjs/native/: dune__exe__J4.cmx
2021/_build/default/.merlin-conf/: exe-J1  exe-J2  exe-J2bis  exe-J3  exe-J4
2022/: j19.ml  j19_beam_search.ml  j19_k_nearest_neigthboors.ml  j3.ml  test.ml
2022/jour_19_other_versions/: j19.ml  j19_code_clair.ml  j19_example_short_datas.ml  j19_long_mais_opti.ml  j19_solution_maximale_avec_squelette.ml  j19v1.ml  j19v2.ml  (+2 more)
2022_2/: j2.ml  j5.ml  j7-p1.txt  j7_test.ml  j8.ml
(+33 files in other folders)
